# evlio

./: CMakeLists.txt  Makefile  Makefile.inc  README  README.md
CMakeModules/: FindGSL.cmake  TargetDistclean.cmake  TargetDoxygen.cmake
FITSRecord/: CMakeLists.txt  FITSRecord.cpp  FITSRecord.hh  HistogramRec.hh  Record.hh
docs/: Makefile  conf.py  development.rst  evlio.template.rst  evlio.utils.rst  fitsrecord.rst  index.rst  installation.rst  make.bat  overview.rst  requirements.rst  usage.rst
evlio/: __init__.py  template.py  utils.py
evlio/tests/: dummy.tpl  dummy2.tpl  test_template.py  test_utils.py
scripts/: create_records.py  test.py  tpl2record.py
src/: FITSRecord.C  FITSRecord.hh  Makefile
templates/evl/1.0.0/: index.tpl
templates/evl/1.0.1/: MCEventList.tpl  cta-arrayinfo.tpl  cta-event-base.inc  cta-mcinfo.tpl  index.tpl  mceventlist.file.tpl
templates/irf/1.0.0/: index.tpl  rmf.file.tpl
templates/v1.0.0/: MCEventList.tpl
